Segunda Actualizacion Del Juego 2

--- a/game/juego2.html
+++ b/game/juego2.html
@@ -21,7 +21,7 @@
       <p class="hint">Encuentra las 3 <strong>X</strong> correctas. Tienes 3 selecciones por ronda. Presiona <kbd>ESC</kbd> para terminar.</p>
     </header>
 
-    <div class="nav-bar">
+    <div class="nav-bar" style="opacity: 0; position: relative;" >
       <div class="nav-left">
         <button class="nav-btn" id="backBtn" title="Volver" onclick="goBack()">⬅️</button>
         <button class="nav-btn" id="pauseBtn" title="Pausar" onclick="togglePause()" disabled>⏸️</button>
