--- a/game/juego2.html
+++ b/game/juego2.html
@@ -5,8 +5,27 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Juego 2 - Atención Selectiva</title>
   <link rel="stylesheet" href="/css/juego2.css" />
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 </head>
 <body>
+
+
+<section class="arrow" id="arrowSection">
+  <lottie-player 
+    src="../animations/arrow.json"
+    background="transparent"
+    speed="0.5"
+    loop
+    autoplay>
+  </lottie-player>
+  <a href="../index.html" title="Volver al Inicio" class="arrow-overlay" id="arrowLink"></a>
+</section>
+
+
+
+
+
 <div class="bg-shapes">
     <div class="shape"></div>
     <div class="shape"></div>
@@ -16,10 +35,22 @@
   </div>
 
   <main class="page">
-    <header>
-      <h1>🎯 Atención Selectiva</h1>
-      <p class="hint">Encuentra las 3 <strong>X</strong> correctas. Tienes 3 selecciones por ronda. Presiona <kbd>ESC</kbd> para terminar.</p>
-    </header>
+
+        <section class="controls">
+          <button id="startBtn" class="btn primary">🚀 Iniciar Juego</button>
+          <button id="stopBtn" class="btn ghost" disabled>🛑 Detener</button>
+        </section>
+
+        <section class="cat">
+          <lottie-player 
+              src="../animations/Cat.json"
+              background="transparent"
+              speed="1"
+              loop
+              autoplay>
+          </lottie-player>
+        </section>
+
 
     <div class="nav-bar" style="opacity: 0; position: relative;" >
       <div class="nav-left">
@@ -49,11 +80,6 @@
         <button class="nav-btn" id="helpBtn" title="Ayuda" onclick="showHelp()">❓</button>
       </div>
     </div>
-
-    <section class="controls">
-      <button id="startBtn" class="btn primary">🚀 Iniciar Juego</button>
-      <button id="stopBtn" class="btn ghost" disabled>🛑 Detener</button>
-    </section>
 
     <section class="board-wrap">
       <div id="board" class="board" aria-live="polite"></div>
@@ -130,5 +156,14 @@
     </div>
   </div>
   <script src="/script/juego2.js"></script>
+
+  <script>
+    // forzar la redirección incluso si hay scripts que bloquean los enlaces
+    const arrowLink = document.getElementById('arrowLink');
+    arrowLink.addEventListener('click', (e) => {
+      e.stopPropagation(); // evita que otro JS intercepte el click
+      window.location.href = arrowLink.getAttribute('href');
+    });
+  </script>
 </body>
 </html>
