Guardando cambios locales antes de hacer pull

--- a/game/juego1.html
+++ b/game/juego1.html
@@ -159,8 +159,6 @@
 </div>
 
 
-
-
   <!-- MODAL -->
   <div id="resultModal" class="modal">
     <div class="modal-content">
@@ -169,7 +167,7 @@
       </div>
       <div class="modal-body">
         <p id="resultText"></p>
-      </div>
+      </div>x
       <div class="modal-footer">
         <button id="restartBtn">Reiniciar Juego</button>
       </div>
